add generic repository scaffold

--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SQLServer": "Server=localhost;Database=erentdatabase;User Id=SA;Password=Rootroot123;"
+  }
 }
