feat: :sparkles: Added migrations, GetUserById flow implemented, added Generic Repository

--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SQLServer": "Server=localhost;Database=erentdatabase;User Id=SA;Password=Rootroot123;"
+    "SQLServer": "Server=localhost;Database=erentdatabase;User Id=SA;Password=Rootroot123;MultipleActiveResultSets=true;Integrated Security=false;TrustServerCertificate=true"
   }
 }
